# SocialSpread_Workflow

./: .env.example  .gitignore  README.md  conftest.py  doubao_ai_image_generator.py  interaction_atoms.json  pyproject.toml  test_social_media_automatic_publish.py
interaction_manager/: __init__.py  core.py
project_doc/: SRS.md  SSRD.md  history_log.md  system_architecture.md  testplan.md
tests/: test_wechat_mp_workflow.py
