[project]
name = "playwright-automation"
version = "0.1.0"
description = "基于Playwright的社交媒体自动化发布系统，集成AI功能和多平台发布能力"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "playwright>=1.54.0",
    "pyperclip>=1.9.0",
    "pytest>=8.4.1",
    "pytest-playwright>=0.7.0",
    "python-dotenv>=1.0.0",
    "requests>=2.25.0",
]
